--- a/ImageHosting/Views/ImagePage/New.cshtml
+++ b/ImageHosting/Views/ImagePage/New.cshtml
@@ -37,5 +37,5 @@
 </div>
 
 <div>
-    <a asp-action="List">Back to Images List</a>
+    <a asp-action="List" class="btn btn-secondary">Back to Images List</a>
 </div>
