--- a/ImageHosting/Views/ProjectPage/Edit.cshtml
+++ b/ImageHosting/Views/ProjectPage/Edit.cshtml
@@ -32,5 +32,5 @@
 </div>
 
 <div>
-    <a asp-action="List">Back to List</a>
+    <a asp-action="List" class="btn btn-secondary">Back to List</a>
 </div>
