--- a/ImageHosting/Views/ProjectPage/New.cshtml
+++ b/ImageHosting/Views/ProjectPage/New.cshtml
@@ -36,8 +36,6 @@
 </div>
 
 <div>
-    <a asp-action="List">Back to List</a>
+    <a asp-action="List" class="btn btn-secondary">Back to List</a>
 </div>
 
-
-}
